# Robotics

./: INTERFACES.md  README.md  SETUP_ENVIRONMENT.md  config.yaml  requirements.txt
coppeliasim/: README.md
experiments/: README.md  config.yaml  experiment_runner.py  metrics.py  run_experiment.sh
mathematics/: README.md  kinematics_dynamics.md  perception_loss.md  rl_optimization.md  vision_matlab.m
perception/: dataset.py  model.py  train.py  train_unet.py
perception/models/: unet.py
rl_control/: ppo.py  train_ppo.py  train_ppo_cnn.py
rl_control/agents/: ppo_cnn.py
ros_ws/launch/: control.launch  full_system.launch  perception.launch  planning.launch
ros_ws/src/control/: README.md  package.xml  rl_control_node.py  rl_state.msg
ros_ws/src/perception/: README.md  package.xml  perception_node.py
ros_ws/src/planning/: README.md  astar_planner.py  hybrid_astar.py  package.xml
tests/: README.md  test_perception.py  test_rl.py  test_ros_nodes.sh
