<package format="2">
  <name>control</name>
  <version>0.0.1</version>
  <description>Control package for RL-based robot control</description>
  <maintainer email="robotics@example.com">Robotics Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
