<package format="2">
  <name>perception</name>
  <version>0.0.1</version>
  <description>Perception package for semantic segmentation</description>
  <maintainer email="robotics@example.com">Robotics Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
</package>
