<package format="2">
  <name>planning</name>
  <version>0.0.1</version>
  <description>Planning package for path planning</description>
  <maintainer email="robotics@example.com">Robotics Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
</package>
